--- a/main.html
+++ b/main.html
@@ -43,7 +43,8 @@
           </div>
         </div>
         <div class="control">
-          <div id="attack-buttons" class="attack-buttons"></div>
+          <div id="attack-buttons-character" class="attack-buttons"></div>
+          <div id="attack-buttons-enemy" class="attack-buttons"></div>
         </div>
         <div class="pokemon enemy">
           <span class="lvl">Lv. 1</span>
